--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,7 @@ python = "^3.10"
 Django = "^4.1.2"
 Pillow = "^9.2.0"
 helpers = "^0.2.0"
-instascraper = "^2.0.4"
+requests = "^2.28.1"
 
 [tool.poetry.dev-dependencies]
 
